--- a/sudokuStyle.css
+++ b/sudokuStyle.css
@@ -12,6 +12,10 @@ body {
     left: 30%;
     top: 20%;
 }
+#details{
+    margin-left: 27%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 
 h1 {
     font-size: 40px;
