--- a/sudokuStyle.css
+++ b/sudokuStyle.css
@@ -12,7 +12,8 @@ body {
     left: 30%;
     top: 20%;
 }
-#details{
+
+#details {
     margin-left: 27%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
@@ -54,7 +55,7 @@ h1 {
 }
 
 /*עיצוב כפתורי בחירת הרמה*/
-#chooseDif{
+#chooseDif {
     text-align: center;
     width: 1100px;
     margin-top: 120px;
@@ -63,7 +64,7 @@ h1 {
 
 #difficulty {
     margin-left: 35%;
-    margin-top:100px;
+    margin-top: 100px;
     /* position: absolute;
     left: 550px;
     top: 300px; */
@@ -91,7 +92,7 @@ td,
 tr {
     border-collapse: collapse;
     border: solid 1px black;
-   
+
 }
 
 td {
@@ -130,10 +131,10 @@ td {
     left: 470px;
     background-color: rgb(80, 80, 201);
     border-radius: 3px;
-    color:white;
+    color: white;
 }
 
-#againBut{
+#againBut {
     font-size: 20px;
     width: 200px;
     height: 30px;
@@ -142,7 +143,7 @@ td {
     left: 880px;
     background-color: rgb(80, 80, 201);
     border-radius: 3px;
-    color:white;
+    color: white;
 }
 
 #watch {
@@ -157,4 +158,13 @@ td {
 
 input::-webkit-inner-spin-button {
     appearance: none;
+}
+
+#backGroundSong {
+    display: none;
+}
+
+#h3Song {
+    display: none;
+    color: aliceblue;
 }
